--- a/css/main.css
+++ b/css/main.css
@@ -2143,19 +2143,11 @@ nav a:hover {
   }
 
   .banner-content{
-    text-align: center;
-    max-width: 80%!important;
+    text-align: center!important;
+    max-width: 100%!important;
   }
 }
 
-@media (max-width: 991px) {
-  .banner-content {
-    margin-top: 100px;
-    left: 10%!important;
-    max-width: 80%!important;
-      text-align: center;
-  }
-}
 
 .banner-content h1 {
   font-size: 58px;
@@ -2217,7 +2209,9 @@ nav a:hover {
     background: none!important;
   }
   .banner-content{
-    width: 80%!important;
+    width: 100%!important;
+    left:0!important;
+    padding: 0 20%;
   }
 }
 
