--- a/css/myStyles.css
+++ b/css/myStyles.css
@@ -67,6 +67,13 @@
   left: 20%;
 }
 
+@media (max-width: 991px) and (min-width:769px) {
+  .banner-content {
+      left: 10%!important;
+      max-width: 40%!important;
+      text-align: left;
+  }
+}
 .about-right{
   height: 100% !important;
   background: #222;
@@ -82,4 +89,38 @@
   width: 100%;
 }
 .alert-msg{
+}
+#blogs{
+  background: #222;
+  position: relative;
+}
+
+#blogs h1{
+  color: white;
+}
+
+#blogs p{
+  color:white;
+}
+
+#blogs .single-blog{
+  color: white;
+}
+#blogs .single-blog a{
+  color: white;
+}
+#blogs .single-blog .bottom{
+  border-bottom: 1px solid white;
+  border-top: 1px solid white;
+}
+.footer-area{
+  border-top: solid white 1px;
+}
+.coverLoad{
+  height: 100%;
+  width: 100%;
+  background: url("../img/Loading.gif") center center no-repeat;
+  background-color: #222;
+  position: absolute;
+  top: 0;
 }
